--- a/with-foundry/circuits/Nargo.toml
+++ b/with-foundry/circuits/Nargo.toml
@@ -1,6 +1,8 @@
 [package]
 authors = [""]
-compiler_version = "0.4.1"
+compiler_version = "0.9.0"
+name = "main"
+type = "bin"
 
 [dependencies]
 noir_merkleroot = { tag = "v0.1.1", git = "https://github.com/tomoima525/noir-merkle-root" }
