--- a/with-foundry/package.json
+++ b/with-foundry/package.json
@@ -17,8 +17,8 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@aztec/bb.js": "^0.3.4",
-    "@noir-lang/acvm_js": "github:noir-lang/acvm-simulator-wasm#c56eec56f67f90fef90126c5575b85190bdcd1e1",
+    "@aztec/bb.js": "^0.3.6",
+    "@noir-lang/acvm_js": "git+https://github.com/noir-lang/acvm-simulator-wasm.git",
     "@noir-lang/noir_wasm": "github:noir-lang/noir_wasm",
     "circomlibjs": "^0.1.7",
     "dotenv": "^16.0.1",
